# data-eng-lab

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  atlas.consumer.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs-deploy.yml  docs-sync.yml  wiki.yml
.superpowers/sdd/: p7-fix1-report.md  phase15-report.md
compose/: data-eng-lab.yml
datasets/: registry.py  registry.yaml  s3.py  schema.py
datasets/sources/: http.py  tpch.py
docs/: CHANGELOG.md  architecture.html  atlas-enablement.md  atlas-expectations.md  atlas-feedback-a7a9.md  atlas-feedback-go-live.md  atlas-pin-bump-runbook.md  datasets.md  getting-started.md  go-live-results.md  go-live.md  index.md  lakehouse-architecture.html  lakehouse.md  scenarios.md  spark-apps.md
docs/css/: custom.css
docs/notebooks/: batch_ingest-nyc_taxi-spark-iceberg.md  bi_query-tpch-trino-iceberg.md  cdc_streaming-online_retail-spark-iceberg.md  data_quality-nyc_taxi-spark-iceberg.md  feature_engineering-movielens-spark-iceberg.md  index.md  (+14 more)
jenkins/: nyc-taxi-etl-job.xml  seed-job.sh
lakehouse/: catalog.py
scripts/: bronze_smoke.py  build_docs.py  build_wiki.py  check_diagrams.py  check_surfaces.py  create_buckets.sh  diagrams_manifest.yaml  download_datasets.py  gen_doc_pages.py  lib.sh  new_scenario.py  register_iceberg.py  render_readme.py  setup-overlay.sh  start-all.sh  stop-all.sh  verify_repo.py  verify_repo_config.yaml
tests/: test_dag_catalog_conf.py  test_lint_config.py  test_live_deps_group.py  test_makefile.py  test_repo_structure.py  test_submodule.py  test_verify_repo.py
(+243 files in other folders)
