[project]
name = "data-eng-lab"
version = "0.1.0"
description = "Iceberg-lakehouse data-engineering lab on the Atlas platform"
requires-python = ">=3.11"

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "pyyaml>=6",
  "boto3>=1.34",
  "requests>=2.32",
  "ruff>=0.4",
]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["infra"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "infra: requires a live Atlas data-eng stack (deselect with -m 'not infra')",
]
